--- a/test/xp1/test1-xp1.tex
+++ b/test/xp1/test1-xp1.tex
@@ -1,8 +1,9 @@
-\textbf{Europarl-noimplications}&4 757&358&1 308&0&1 034&\textbf{280}&185 776&1 083&\textbf{185 762}\\
-\textbf{Europarl-all}&4 757&358&1 308&1 034&1 034&280&185 776&\textbf{235}&\textbf{13 287}\\
-\textbf{Europarl-ordinal}&4 757&358&1 308&709&1 034&280&185 776&\textbf{251}&\textbf{16 611}\\
-\textbf{Yelp-1000}&1 000&485&1 186&581&1 252&216&246 598&\textbf{178}&\textbf{40 363}\\
-\textbf{Yelp-10000}&10 000&844&7 763&1 046&1 832&2 525&2 355 545&\textbf{2 005}&\textbf{331 402}\\
-\textbf{Yelp-50000}&50 000&1 086&29 461&1 387&2 249&16 669&10 885 830&\textbf{12 291}&\textbf{1 414 017}\\
-\textbf{BL-interordinal}&40&272&272 223&4 716&13 724&56 867&13 340 233&\textbf{3 779}&\textbf{703 999}\\
-\textbf{BL-all}&40&272&272 223&13 724&13 724&56 867&13 340 233&\textbf{7 927}&\textbf{445 735}\\
+1&\textbf{Europarl-noimplications}&4 757&358&1 308&0&1 034&\textbf{275}&185 776&1 101&\textbf{185 762}\\
+2&\textbf{Europarl-ordinal}&4 757&358&1 308&709&1 034&275&185 776&\textbf{253}&\textbf{16 611}\\
+3&\textbf{Europarl-allimplications}&4 757&358&1 308&1 034&1 034&275&185 776&\textbf{234}&\textbf{13 287}\\
+4&\textbf{Yelp-1000}&1 000&485&1 186&581&1 252&210&246 598&\textbf{182}&\textbf{40 363}\\
+5&\textbf{Yelp-10000}&10 000&844&7 763&1 046&1 832&2 939&2 355 545&\textbf{1 960}&\textbf{331 402}\\
+6&\textbf{Yelp-50000}&50 000&1 086&29 461&1 387&2 249&15 020&10 885 830&\textbf{11 817}&\textbf{1 414 017}\\
+7&\textbf{Yelp-all}&127 162&1 174&63 300&1 514&2 111&38 186&24 437 659&\textbf{32 512}&\textbf{3 317 590}\\
+8&\textbf{BL-interordinal}&40&272&272 223&4 716&13 724&60 600&13 340 233&\textbf{4 328}&\textbf{703 999}\\
+9&\textbf{BL-allimplications}&40&272&272 223&13 724&13 724&60 600&13 340 233&\textbf{9 200}&\textbf{445 735}\\
